*Empty MediaWiki Message*

--- a/Lyste_van_landen_van_de_wearld.mw
+++ b/Lyste_van_landen_van_de_wearld.mw
@@ -192,7 +192,7 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 !width=20%|Höyvdstad
 !width=25%|Korte landsname (oorsprungelike taal/talen)
 |-
-|[[Denemarken|Dänemarken]]<ref name=B>Dit land hevt (oaverseyske) ofhankelike gebeden of landen. See ouk et gedeylte [[#Neet-unafhankelike gebeden|neet-unafhankelike gebeden]].</ref>
+|[[Denemarken|Dänemarken]]<ref name=B>Dit land hevt (oaverseyske) afhangelike gebeden of landen. See ouk et gedeylte [[#Neet-unafhangelike gebeden|neet-unafhangelike gebeden]].</ref>
 |Koaningryk Dänemarken
 |[[Kopenhagen|Koupenhaven]]
 |[[Deens|Däänsk]]: Danmark
@@ -508,7 +508,7 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |[[Kinsjasa]]
 |[[Frans]]k: Congo
 |-
-|[[Kosovo]]<ref name=Kosovo>De serviske autonome provincy Kosovo (Kosova - Kosovo i Metohija / Косово и Метохија) hevt syn eigen eynsydig unafhankelik verklård en wördt döär 111 landen erkend. Volgens de kosovaarske regering en ouk volgens de websteade [http://www.kosovothanksyou.com/ www.kosovothanksyou.com] wördt de unafhankelikheid van Kosovo erkend döär 116 landen. Dree van disse landen, Nigeria, Uganda en São Tomé en Príncipe, bewären dat se Kosovo neet erkend hebben as unafhankelik land. Twey andere landen (Burundi en Suriname) hebben de erkenning inetrökken.</ref>
+|[[Kosovo]]<ref name=Kosovo>De serviske autonome provincy Kosovo (Kosova - Kosovo i Metohija / Косово и Метохија) hevt syn eigen eynsydig unafhangelik verklård en wördt döär 111 landen erkend. Volgens de kosovaarske regering en ouk volgens de websteade [http://www.kosovothanksyou.com/ www.kosovothanksyou.com] wördt de unafhangelikheid van Kosovo erkend döär 116 landen. Dree van disse landen, Nigeria, Uganda en São Tomé en Príncipe, bewären dat se Kosovo neet erkend hebben as unafhangelik land. Twey andere landen (Burundi en Suriname) hebben de erkenning inetrökken.</ref>
 |Republik Kosovo
 |[[Pristina]]
 |[[Albanees]]k: Kosova <br /> [[Servies|servisk]]: Kosovo / Косово
@@ -795,7 +795,7 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |[[Spaans]]k: Panamá
 |-
 |[[Papua-Ny-Ginea]]
-|Unafhankelike Ståt Papua-Ny-Ginea
+|Unafhangelike Ståt Papua-Ny-Ginea
 |[[Port Moresby]]
 |[[Engels]]k: Papua New Guinea <br /> [[Hiri Motu]]: Papu Niu Gini <br /> [[Tok Pisin]]: Papua Niugini
 |-
@@ -857,7 +857,7 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |[[Engels]]k: Solomon Islands
 |-
 |[[Samoa]]
-|Unafhankelike Ståt Samoa
+|Unafhangelike Ståt Samoa
 |[[Apia]]
 |[[Engels]]k: Samoa<br />[[Samoaans]]k: Sāmoa
 |-
@@ -1095,7 +1095,7 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |[[Port Vila]]
 |[[Bislama]], [[engels]]k en [[frans]]k: Vanuatu
 |-
-|[[Vatikaanstad]]<ref>Et Vatikaan wördt ouk wel an-edüüd as Heilige Stool.</ref>
+|[[Vatikaanstad]]<ref>Et Vatikaan wördt ouk wel anedüded as Heilige Stool.</ref>
 |Ståt Vatikaanstad
 |Vatikaanstad
 |[[Italiaans]]k<ref name=defacto />: Città del Vaticano
@@ -1178,7 +1178,7 @@ Hyrunder volgt een '''lyste van landen van de wearld'''.
 |}
 
 == Neet algemeyn erkende landen ==
-In de lyste hyrunder stayt een oaversicht van landen dee een rume internationale erkenning missen, mär wel [[de facto]] unafhankelik binnen en de unafhankelikheid uuteröpen hebben. In de kolom ''Erkenning'' stayt et antal ''internationaal erkende unafhankelike ståten'' dat et betreffende gebeed as unafhankelik erkent.
+In de lyste hyrunder stayt een oaversicht van landen dee een rume internationale erkenning missen, mär wel [[de facto]] unafhangelik binnen en de unafhangelikheid üüteröpen hebben. In de kolom ''Erkenning'' stayt et antal ''internationaal erkende unafhangelike ståten'' dat et betreffende gebeed as unafhangelik erkent.
 
 {| class="wikitable" style="width: 100%;"
 !width=25%|Korte landsname (neadersassisk)
@@ -1191,27 +1191,27 @@ In de lyste hyrunder stayt een oaversicht van landen dee een rume internationale
 |Republik Abchazie
 |[[Suchumi]]
 |[[Abchazies|Abchazisk]]: Apsny / Аҧсны <br /> [[Russies|Russisk]]: Abchazija / Абхазия
-|4<ref>[[Abchazie]] wördt döär et groutste deyl van de internationale gemeynskap eseen as een autonome republik van [[Georgië]]. De unafhankelikheid van Abchazie wördt erkend döär Nauru, Nicaragua, Rusland en Venezuela. Abchazie is ouk ooyt erkend döär Vanuatu en Tuvalu, mär disse landen hebben höär erkenning in-etrökken.</ref>
+|4<ref>[[Abchazie]] wördt döär et groutste deyl van de internationale gemeynskap eseen as een autonome republik van [[Georgië]]. De unafhangelikheid van Abchazie wördt erkend döär Nauru, Nicaragua, Rusland en Venezuela. Abchazie is ouk ooyt erkend döär Vanuatu en Tuvalu, mär disse landen hebben höär erkenning inetrökken.</ref>
 |-
 |[[Arabiske Demokratiske Republik Sahara|ADRS]]
 |Arabiske Demokratiske Republik Sahara (ADRS)
 |[[al-Ajun]] (upeist) <br /> [[Tifariti]] (de facto)
 |[[Arabies|Arabisk]]: Al-Jumhūrīya al-ʿArabīya aṣ-Ṣaḥrāwīya ad-Dīmuqrāṭīya / الجمهورية العربية الصحراوية الديمقراطية <br /> [[Spaans]]k: República Árabe Saharaui Democrática (RASD)
-|45<ref>De [[Arabiske Demokratiske Republik Sahara]] (ADRS) hevt feitelik allinnig gesag oaver een klein deyl van de [[Westelike Sahara]]. De rest wördt de facto bestüürd döär Marokko, mär et Marokkaanske bestüür oaver de Westelike Sahara wördt internationaal neet erkend. De ADRS is ooyt döär 84 landen erkend. 39 landen hebben höär erkenning lykewel wear in-etrökken of up-eskort.</ref>
+|45<ref>De [[Arabiske Demokratiske Republik Sahara]] (ADRS) hevt feitelik allinnig gesag oaver een klein deyl van de [[Westelike Sahara]]. De rest wördt de facto bestüürd döär Marokko, mär et Marokkaanske bestüür oaver de Westelike Sahara wördt internationaal neet erkend. De ADRS is ooyt döär 84 landen erkend. 39 landen hebben höär erkenning lykewel wear inetrökken of upeskorted.</ref>
 |-
 |[[Republik Artsach|Artsach]]
 |Republik Artsach
 |[[Stepanakert]]
 |[[Armeens]]k: Artsakh / Արցախ
-|0<ref>De [[Republik Artsach]], ouk wel de Republik Nagorno-Karabach enöömd, hevt de kontrole oaver een grout deyl van de regio [[Nagorno-Karabach]], mär wördt döär et groutste deyl van de internationale gemeynskap eseen as een underdeyl van [[Azerbaidjan]]. De unafhankelikheid van Artsach wördt allinnig erkend döär Abchazie, Transnistrie en Süüdossetie, dee selv ouk neet algemeyn erkend binnen.</ref>
+|0<ref>De [[Republik Artsach]], ouk wel de Republik Nagorno-Karabach enöömd, hevt de kontrole oaver een grout deyl van de regio [[Nagorno-Karabach]], mär wördt döär et groutste deyl van de internationale gemeynskap eseen as een underdeyl van [[Azerbaidjan]]. De unafhangelikheid van Artsach wördt allinnig erkend döär Abchazie, Transnistrie en Süüdossetie, dee selv ouk neet algemeyn erkend binnen.</ref>
 |-
-<!-- LET UP! [[Katalonie]] is (noch) neet [[de facto]] unafhankelik -->
+<!-- LET UP! [[Katalonie]] is (noch) neet [[de facto]] unafhangelik -->
 |-
 |[[Volksrepublik Donetsk|Donetsk]]
 |Volksrepublik Donetsk
 |[[Donetsk]]
 |[[Russies|Russisk]]: Donetsk / Донецк
-|0<ref name=oekraine>De [[Volksrepublik Donetsk]] en de [[Volksrepublik Lugansk]] hebben de kontrole oaver een gedeylte van de Ukrainske oblasten [[Oblast Donetsk|Donetsk]] en [[Oblast Luhansk|Luhansk]], mär wörden döär et groutste deyl van de internationale gemeynskap eseen as een underdeyl van [[Ukraine]]. De volksrepubliken erkennen mekaars unafhankelikheid en wörden beide vearder enkeld erkend döär Süüdossetie, dat selv ouk neet algemeyn erkend wördt.</ref>
+|0<ref name=oekraine>De [[Volksrepublik Donetsk]] en de [[Volksrepublik Lugansk]] hebben de kontrole oaver een gedeylte van de Ukrainske oblasten [[Oblast Donetsk|Donetsk]] en [[Oblast Luhansk|Luhansk]], mär wörden döär et groutste deyl van de internationale gemeynskap eseen as een underdeyl van [[Ukraine]]. De volksrepubliken erkennen mekaars unafhangelikheid en wörden beide vearder enkeld erkend döär Süüdossetie, dat selv ouk neet algemeyn erkend wördt.</ref>
 |-
 |[[Volksrepublik Lugansk|Lugansk]]
 |Volksrepublik Lugansk
@@ -1235,7 +1235,7 @@ In de lyste hyrunder stayt een oaversicht van landen dee een rume internationale
 |Republik Süüdossetie
 |[[Tschinvali]]
 |[[Georgisk]]: Samchret Osseti / სამხრეთ ოსეთი <br /> [[Ossetisk]]: Xussar Iryston / Хуссар Ирыстон <br /> [[Russies|Russisk]]: Južnaja Osetia / Южная Осетия
-|4<ref>[[Süüdossetie]] wördt erkend döär Nauru, Nicaragua, Rusland en Venezuela. Süüdossetie is ouk ooyt erkend döär Tuvalu, mär dat land hevt de erkenning in-etrökken.</ref>
+|4<ref>[[Süüdossetie]] wördt erkend döär Nauru, Nicaragua, Rusland en Venezuela. Süüdossetie is ouk ooyt erkend döär Tuvalu, mär dat land hevt de erkenning inetrökken.</ref>
 |-
 |[[Taiwan]]
 |Republik China
@@ -1248,14 +1248,14 @@ In de lyste hyrunder stayt een oaversicht van landen dee een rume internationale
 |Pridnestroviske Moldaviske Republik
 |[[Tiraspol]]
 |[[Moldavies|Moldavisk]]: Transnistria / Транснистря <br /> [[Oekraïens|Ukrains]]k: Pridnistrovja / Придністров'я <br /> [[Russies|Russisk]]: Pridnestrovje / Приднестровье
-|0<ref>[[Transnistrie]] wördt döär et groutste deyl van de internationale gemeynskap eseen as een underdeyl van [[Moldavie]]. De unafhankelikheid wördt enkeld erkend döär Abchazie, Artsach en Süüdossetie, dee selv ouk neet algemeyn erkend binnen.</ref>
+|0<ref>[[Transnistrie]] wördt döär et groutste deyl van de internationale gemeynskap eseen as een underdeyl van [[Moldavie]]. De unafhangelikheid wördt enkeld erkend döär Abchazie, Artsach en Süüdossetie, dee selv ouk neet algemeyn erkend binnen.</ref>
 |}
 
-== Neet-unafhankelike gebeden ==
-Dit is een lyste van [[ofhankelike gebeden]]. Ofhankelike gebeden binnen gebeden dee geyn integraal underdeyl binnen van een land, mär selv ouk neet unafhankelik binnen. Allinnig de Vereynigde Ståten, et Vereynigd Koaningryk, Noorweagen en Ny-Seyland hebben gebeden ekreëerd dee an disse definity vuldoon. Dårnåst binnen der noch een antal gebeden dee officieel geyn ofhankelike gebeden binnen, mär vanweage höär bysündere ståtus toch vake so eseen wörden. Ouk disse gebeden binnen in de lyste up-enöämen. Een antal landen (Argentinie, Australie, Chili, Frankryk, Ny-Seyland, Noorweagen en et Vereynigd Koaningryk) hebben een deyl van [[Antarktika]] upeist. Up båsis van et [[Antarktisk Verdrag]] wörden disse anspraken internationaal neet erkend en dårümme binnen disse anspraken ouk neet in de lyste up-enöämen.
+== Neet-unafhangelike gebeden ==
+Dit is een lyste van [[afhangelike gebeden]]. Afhangelike gebeden binnen gebeden dee geyn integraal underdeyl binnen van een land, mär selv ouk neet unafhangelik binnen. Allinnig de Vereynigde Ståten, et Vereynigd Koaningryk, Noorweagen en Ny-Seyland hebben gebeden ekreëerd dee an disse definity vuldoon. Dårnåst binnen der noch een antal gebeden dee officieel geyn afhangelike gebeden binnen, mär vanweage höär bysündere ståtus toch vake so eseen wörden. Ouk disse gebeden binnen in de lyste upenöämen. Een antal landen (Argentinie, Australie, Chili, Frankryk, Ny-Seyland, Noorweagen en et Vereynigd Koaningryk) hebben een deyl van [[Antarktika]] upeist. Up båsis van et [[Antarktisk Verdrag]] wörden disse anspraken internationaal neet erkend en dårümme binnen disse anspraken ouk neet in de lyste upenöämen.
 
-=== Amerikaanske neet-unafhankelike gebeden ===
-De [[Amerikaanske Maagdeneilanden]], [[Guam]], de [[Noordelike Marianen]] en [[Puerto Rico]] binnen ''georganiseerde neet-ingelyvde territoria'', wat seagen wil dat et ofhankelike gebeden binnen van de Vereynigde Ståten mid een bepålde form van selvbestüür. Dårnåst binnen der noch een antal ''ungeorganiseerde neet-ingelyvde territoria'': [[Baker (eiland)|Baker]], [[Howland (eiland)|Howland]], [[Jarvis (eiland)|Jarvis]], [[Johnston (atol)|Johnston]], [[Kingman (rif)|Kingman]], [[Midway (eiland)|Midway]], [[Navassa]] en [[Wake (eiland)|Wake]]. Disse groutendeyls unbewunde eilandgebeden binnen ouk ofhankelike gebeden van de VS, mär kennen geyn form van selvbestüür. Vöär ståtistiske dooleinden wörden se döär [[ISO 3166-1]] egruppeerd under de name [[Kleine afgeleagen eilanden van de Vereynigde Ståten]]. Ouk [[Palmyra (atol)|Palmyra]], dat een ''ungeorganiseerd ingelyvd territorium'' is en düs wel een integraal underdeyl is van de Vereynigde Ståten, wördt hyrto erekend. De [[CIA]] gruppeert de unbewunde eilanden (behalve Navassa en Wake) in et World Factbook under de name [[United States Pacific Island Wildlife Refuges]].<ref name="cia.gov">https://www.cia.gov/library/publications/the-world-factbook/</ref> [[Bajo Nuevo]] en [[Serranilla]] wörden döär de Vereynigde Ståten ouk upeist as ''ungeorganiseerde neet-ingelyvde territoria'', mär wörden momenteel bestüürd döär [[Colombia]]. [[Amerikaansk-Samoa]] is officieel ouk een ''ungeorganiseerd neet-ingelyvd territorium'', mär hevt wel een bepålde form van selvbestüür.
+=== Amerikaanske neet-unafhangelike gebeden ===
+De [[Amerikaanske Maagdeneilanden]], [[Guam]], de [[Noordelike Marianen]] en [[Puerto Rico]] binnen ''georganiseerde neet-ingelyvde territoria'', wat seagen wil dat et afhangelike gebeden binnen van de Vereynigde Ståten mid een bepålde form van selvbestüür. Dårnåst binnen der noch een antal ''ungeorganiseerde neet-ingelyvde territoria'': [[Baker (eiland)|Baker]], [[Howland (eiland)|Howland]], [[Jarvis (eiland)|Jarvis]], [[Johnston (atol)|Johnston]], [[Kingman (rif)|Kingman]], [[Midway (eiland)|Midway]], [[Navassa]] en [[Wake (eiland)|Wake]]. Disse groutendeyls unbewunde eilandgebeden binnen ouk afhangelike gebeden van de VS, mär kennen geyn form van selvbestüür. Vöär ståtistiske dooleinden wörden se döär [[ISO 3166-1]] egruppeerd under de name [[Kleine afgeleagen eilanden van de Vereynigde Ståten]]. Ouk [[Palmyra (atol)|Palmyra]], dat een ''ungeorganiseerd ingelyvd territorium'' is en düs wel een integraal underdeyl is van de Vereynigde Ståten, wördt hyrto erekend. De [[CIA]] gruppeert de unbewunde eilanden (behalve Navassa en Wake) in et World Factbook under de name [[United States Pacific Island Wildlife Refuges]].<ref name="cia.gov">https://www.cia.gov/library/publications/the-world-factbook/</ref> [[Bajo Nuevo]] en [[Serranilla]] wörden döär de Vereynigde Ståten ouk upeist as ''ungeorganiseerde neet-ingelyvde territoria'', mär wörden momenteel bestüürd döär [[Colombia]]. [[Amerikaansk-Samoa]] is officieel ouk een ''ungeorganiseerd neet-ingelyvd territorium'', mär hevt wel een bepålde form van selvbestüür.
 
 {| class="wikitable" style="width: 100%;"
 !width=25%|Korte landsname (neadersassisk)
@@ -1334,8 +1334,8 @@ De [[Amerikaanske Maagdeneilanden]], [[Guam]], de [[Noordelike Marianen]] en [[P
 |[[Engels]]k<ref name=defacto />: Wake Island
 |}
 
-=== Australiske neet-unafhankelike gebeden ===
-Australie hevt söäven eksterne territoria. Disse territoria wörden döär de australiske oaverheid eseen as een integraal underdeyl van Australie<ref>[http://www.aph.gov.au/parliamentary_Business/Committees/House_of_Representatives_Committees?url=ncet/nicitizenshipre-referral/chapter2.pdf Parliament of Australia - Norfolk Island and the Commonwealth]</ref><ref>[http://www.aph.gov.au/parliamentary_business/committees/house_of_representatives_committees?url=itrdlg/coastalshipping/subs/sub27.pdf Parliament of Australia - Submission to the inquiry into coastal shipping policy and regulation]</ref>, mär wörden vake toch eseen as ofhankelike gebeden van Australie. Et [[Australisk Antarktisk Territorium]] wördt as ansprake internationaal neet erkend en is dan ouk neet in disse lyste up-enöämen.
+=== Australiske neet-unafhangelike gebeden ===
+Australie hevt söäven eksterne territoria. Disse territoria wörden döär de australiske oaverheid eseen as een integraal underdeyl van Australie<ref>[http://www.aph.gov.au/parliamentary_Business/Committees/House_of_Representatives_Committees?url=ncet/nicitizenshipre-referral/chapter2.pdf Parliament of Australia - Norfolk Island and the Commonwealth]</ref><ref>[http://www.aph.gov.au/parliamentary_business/committees/house_of_representatives_committees?url=itrdlg/coastalshipping/subs/sub27.pdf Parliament of Australia - Submission to the inquiry into coastal shipping policy and regulation]</ref>, mär wörden vake toch eseen as afhangelike gebeden van Australie. Et [[Australisk Antarktisk Territorium]] wördt as ansprake internationaal neet erkend en is dan ouk neet in disse lyste upenöämen.
 
 {| class="wikitable" style="width: 100%;"
 !width=25%|Korte landsname (neadersassisk)
@@ -1374,8 +1374,8 @@ Australie hevt söäven eksterne territoria. Disse territoria wörden döär de 
 |[[Engels]]k: Norfolk Island <br /> [[Norfuk]]: Norfuk Ailen
 |}
 
-=== Britske neet-unafhankelike gebeden ===
-De veerteen [[britske oaverseyske gebeden]] binnen geyn integraal underdeyl van et Vereynigd Koaningryk, mär binnen hyr wel van ofhankelik en vallen under de britske suvereiniteit. De ansprake van et [[Britsk Antarktisk Territorium]] wördt internationaal neet erkend en is düs neet in de lyste up-enöämen. [[Jersey (eiland)|Jersey]], [[Guernsey]] en [[Man (eilaand)|Man]] vallen as [[Brits Kroonbezit|britske kroonbesittingen]] neet under de suvereiniteit van et Vereynigd Koaningryk, mär under de suvereiniteit van de britske krone en hebben dårdöär een andere relaty tot et Vereynigd Koaningryk.
+=== Britske neet-unafhangelike gebeden ===
+De veerteen [[britske oaverseyske gebeden]] binnen geyn integraal underdeyl van et Vereynigd Koaningryk, mär binnen hyr wel van afhangelik en vallen under de britske suvereiniteit. De ansprake van et [[Britsk Antarktisk Territorium]] wördt internationaal neet erkend en is düs neet in de lyste up-enöämen. [[Jersey (eiland)|Jersey]], [[Guernsey]] en [[Man (eilaand)|Man]] vallen as [[Brits Kroonbezit|britske kroonbesittingen]] neet under de suvereiniteit van et Vereynigd Koaningryk, mär under de suvereiniteit van de britske krone en hebben dårdöär een andere relaty tot et Vereynigd Koaningryk.
 
 {| class="wikitable" style="width: 100%;"
 !width=25%|Korte landsname (neadersassisk)
@@ -1464,8 +1464,8 @@ De veerteen [[britske oaverseyske gebeden]] binnen geyn integraal underdeyl van 
 |[[Engels]]k<ref name=defacto />: South Georgia and the South Sandwich Islands
 |}
 
-=== Chineeske neet-unafhankelike gebeden ===
-[[Hongkong]] en [[Makau]] maken feitelik integraal deyl uut van China, mär hebben een speciale bestüürlike ståtus, wårdöär se vake as ofhankelike gebeden eseen wörden.
+=== Chineeske neet-unafhangelike gebeden ===
+[[Hongkong]] en [[Makau]] maken feitelik integraal deyl üüt van China, mär hebben een speciale bestüürlike ståtus, wårdöär se vake as afhangelike gebeden eseen wörden.
 
 {| class="wikitable" style="width: 100%;"
 !width=25%|Korte landsname (neadersassisk)
@@ -1484,8 +1484,8 @@ De veerteen [[britske oaverseyske gebeden]] binnen geyn integraal underdeyl van 
 |[[Chinese talen|Chineesk]]: Àomén / ([[Standardkantonees]]k): Òow Mǒe / 澳门 <br /> [[Portugees]]k: Macau
 |}
 
-=== Däänske neet-unafhankelike gebeden ===
-[[Färöer]] en [[Gruunlaand|Gröönland]] binnen autonome provincys van et [[Koninkriek Denemarken|Koaningryk Dänemarken]] en maken feitelik integraal deyl uut van dat land. Vake wörden se eseen as ofhankelike gebeden mid een groute form van autonomy.
+=== Däänske neet-unafhangelike gebeden ===
+[[Färöer]] en [[Gruunlaand|Gröönland]] binnen autonome provincys van et [[Koninkriek Denemarken|Koaningryk Dänemarken]] en maken feitelik integraal deyl üüt van dat land. Vake wörden se eseen as afhangelike gebeden mid een groute form van autonomy.
 
 {| class="wikitable" style="width: 100%;"
 !width=25%|Korte landsname (neadersassisk)
@@ -1504,8 +1504,8 @@ De veerteen [[britske oaverseyske gebeden]] binnen geyn integraal underdeyl van 
 |[[Gruunlaans|Gröönlandsk]]: Kalaallit Nunaat
 |}
 
-=== Finske neet-unafhankelike gebeden ===
-[[Åland]] maakt feitelik integraal underdeyl uut van Finland, mär hevt sinds de [[Vreade van Parys (1856)]] een internationaal erkende speciale ståtus mid groute autonomy.
+=== Finske neet-unafhangelike gebeden ===
+[[Åland]] maakt feitelik integraal underdeyl üüt van Finland, mär hevt sinds de [[Vreade van Parys (1856)]] een internationaal erkende speciale ståtus mid groute autonomy.
 
 {| class="wikitable" style="width: 100%;"
 !width=25%|Korte landsname (neadersassisk)
@@ -1519,8 +1519,8 @@ De veerteen [[britske oaverseyske gebeden]] binnen geyn integraal underdeyl van 
 |[[Zweeds|Sweedsk]]: Åland
 |}
 
-=== Franske neet-unafhankelike gebeden ===
-Alle [[franske oaverseyske gebeden]] maken integraal underdeyl uut van Frankryk<ref>[http://www.servat.unibe.ch/icl/fr00000_.html#A072_ ICL - France Constitution]</ref> en et land kent düs officieel geyn ofhankelike gebeden. De franske oaverseyske gebeden wörden wel vake so eseen<ref>http://www.nationsonline.org/oneworld/territories.htm</ref>, al wörden soms allinnig de oaverseyske gebeden dee geyn oaverseysk departement binnen, eseen as ofhankelike gebeden<ref name="cia.gov"/>. Vöär de vulledigheid stån hyr alle franske oaverseyske gebeden by up. Let up dat by de [[Franske Südelike en Antarktiske Gebeden]] de ansprake up een deyl van [[Antarktika]] internationaal neet erkend wördt.
+=== Franske neet-unafhangelike gebeden ===
+Alle [[franske oaverseyske gebeden]] maken integraal underdeyl üüt van Frankryk<ref>[http://www.servat.unibe.ch/icl/fr00000_.html#A072_ ICL - France Constitution]</ref> en et land kent düs officieel geyn afhangelike gebeden. De franske oaverseyske gebeden wörden wel vake so eseen<ref>http://www.nationsonline.org/oneworld/territories.htm</ref>, al wörden sums allinnig de oaverseyske gebeden dee geyn oaverseysk departement binnen, eseen as afhangelike gebeden<ref name="cia.gov"/>. Vöär de vulledigheid stån hyr alle franske oaverseyske gebeden by up. Let up dat by de [[Franske Südelike en Antarktiske Gebeden]] de ansprake up een deyl van [[Antarktika]] internationaal neet erkend wördt.
 
 {| class="wikitable" style="width: 100%;"
 !width=25%|Korte landsname (neadersassisk)
@@ -1594,8 +1594,8 @@ Alle [[franske oaverseyske gebeden]] maken integraal underdeyl uut van Frankryk<
 |[[Frans]]k: Wallis-et-Futuna
 |}
 
-=== Neaderlandske neet-unafhankelike gebeden ===
-Et [[Keuninkriek der Nederlaanden|Koaningryk van de Neaderlanden]] besteyt uut veer gelykwaerdige landen: [[Nederlaand|Neaderland]], [[Aruba]], [[Kurasou|Curaçao]] en [[Sunt-Marten (land)|Sünt-Marten]]. Disse lätste dree binnen düs officieel geyn ofhankelike gebeden van Nederland, mär wörden toch vake so eseen. De karibiske eilanden [[Bonaire]], [[Sunt-Eustasius|Sünt-Eustatius]] en [[Saba]] maken as [[Karibisk Nederland|bysündere gemeynte]] deyl uut van et land Nederland. Vöär ståtistiske dooleinden wörden disse dree BES-eilanden döär [[ISO 3166-1]] as eyn gebeed egruppeerd.
+=== Neaderlandske neet-unafhangelike gebeden ===
+Et [[Keuninkriek der Nederlaanden|Koaningryk van de Neaderlanden]] besteyt üüt veer gelykwaerdige landen: [[Nederlaand|Neaderland]], [[Aruba]], [[Kurasou|Curaçao]] en [[Sunt-Marten (land)|Sünt-Marten]]. Disse lätste dree binnen düs officieel geyn afhangelike gebeden van Nederland, mär wörden toch vake so eseen. De karibiske eilanden [[Bonaire]], [[Sunt-Eustasius|Sünt-Eustatius]] en [[Saba]] maken as [[Karibisk Nederland|bysündere gemeynte]] deyl üüt van et land Nederland. Vöär ståtistiske dooleinden wörden disse dree BES-eilanden döär [[ISO 3166-1]] as eyn gebeed egruppeerd.
 
 {| class="wikitable" style="width: 100%;"
 !width=25%|Korte landsname (neadersassisk)
@@ -1634,8 +1634,8 @@ Et [[Keuninkriek der Nederlaanden|Koaningryk van de Neaderlanden]] besteyt uut v
 |[[Engels]]k en [[Nederlaans|neaderlandsk]]: Sint Maarten
 |}
 
-=== Ny-Seylandske neet-unafhankelike gebeden ===
-De [[Cookeilanden]] en [[Niue]] binnen selvbestürende gebeden in vrye associaty mid Ny-Seyland en wörden soms as unafhankelike landen eseen. [[Tokelau]] en [[Ross Dependency]] binnen beide ofhankelike gebeden van Ny-Seyland, mär de (antarktiske) ansprake up Ross Dependency wördt internationaal neet erkend.
+=== Ny-Seylandske neet-unafhangelike gebeden ===
+De [[Cookeilanden]] en [[Niue]] binnen selvbestürende gebeden in vrye associaty mid Ny-Seyland en wörden sums as unafhangelike landen eseen. [[Tokelau]] en [[Ross Dependency]] binnen beide afhangelike gebeden van Ny-Seyland, mär de (antarktiske) ansprake up Ross Dependency wördt internationaal neet erkend.
 
 {| class="wikitable" style="width: 100%;"
 !width=25%|Korte landsname (neadersassisk)
@@ -1654,13 +1654,13 @@ De [[Cookeilanden]] en [[Niue]] binnen selvbestürende gebeden in vrye associaty
 |[[Engels]]k: Niue <br /> [[Niuees]]k: Niuē Fekai
 |-
 |[[Tokelau]]
-|Ofhankelik gebeed
+|Afhangelik gebeed
 |(Geyn)
 |[[Engels]]k en [[tokelaus]]k: Tokelau
 |}
 
-=== Noorske neet-unafhankelike gebeden ===
-[[Spitsbargen]] maakt feitelik integraal underdeyl uut van Noorweagen, mär hevt volgens et [[Spitsbargenverdrag]] een internationaal erkende speciale ståtus mid groute autonomy. Ouk [[Jan Mayen]] maakt integraal deyl uut van Noorweagen as underdeyl van de provincy [[Nordland (provincy)|Nordland]], mär wördt vake toch eseen as ofhankelik gebeed. Vöär ståtistiske dooleinden wördt [[Jan Mayen]] in [[ISO 3166-1]] samenevoogd mid Spitsbargen as [[Spitsbargen en Jan Mayen]]. [[Bouveteiland]], [[Peter I-eiland]] en [[Koningin Maudland]] binnen wel ofhankelike gebeden van Noorweagen, mär de (antarktiske) ansprake up de lätste twee wörden internationaal neet erkend.
+=== Noorske neet-unafhangelike gebeden ===
+[[Spitsbargen]] maakt feitelik integraal underdeyl üüt van Noorweagen, mär hevt volgens et [[Spitsbargenverdrag]] een internationaal erkende speciale ståtus mid groute autonomy. Ouk [[Jan Mayen]] maakt integraal deyl üüt van Noorweagen as underdeyl van de provincy [[Nordland (provincy)|Nordland]], mär wördt vake toch eseen as afhangelik gebeed. Vöär ståtistiske dooleinden wördt [[Jan Mayen]] in [[ISO 3166-1]] samenevoogd mid Spitsbargen as [[Spitsbargen en Jan Mayen]]. [[Bouveteiland]], [[Peter I-eiland]] en [[Koningin Maudland]] binnen wel afhangelike gebeden van Noorweagen, mär de (antarktiske) ansprake up de lätste twee wörden internationaal neet erkend.
 
 {| class="wikitable" style="width: 100%;"
 !width=25%|Korte landsname (neadersassisk)
@@ -1669,7 +1669,7 @@ De [[Cookeilanden]] en [[Niue]] binnen selvbestürende gebeden in vrye associaty
 !width=25%|Korte landsname (oorsprungelike taal/talen)
 |-
 |[[Bouveteilaand|Bouveteiland]]
-|[[Ofhankelik gebeed]]
+|[[Afhangelik gebeed]]
 |(Unbewund)<ref name=Unbewund />
 |[[Noors]]k: Bouvetøya
 |-
